kustomize-units/rancher-init/components/webhook-ha/webhook-replicas-policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: rancher-webhook-replicas
  namespace: sylva-system
  annotations:
    kustomize.toolkit.fluxcd.io/force: Enabled
    policies.kyverno.io/title: increase the number of replicas of rancher-webhook deployment
    policies.kyverno.io/minversion: 1.11.0
spec:
  rules:
  - name: rancher-webhook-replicas
    match:
      any:
      - resources:
          kinds:
          - Deployment
          names:
          - rancher-webhook
          namespaces:
          - cattle-system
    mutate:
      targets:
      - apiVersion: apps/v1
        kind: Deployment
        name: rancher-webhook
        namespace: cattle-system
      patchStrategicMerge:
        spec:
          replicas: 2
